--- a/wechat/app/views/includes/header.jade
+++ b/wechat/app/views/includes/header.jade
@@ -5,7 +5,7 @@
       .col-md-4
         small 重度科幻迷
       .col-md-8
-        form(method='GET', action='/results')
+        form(method='GET', action='/nodeport/results')
           .input-group.col-sm-4.pull-right
             input.form-control(type='text', name='q')
             span.input-group-btn
@@ -13,12 +13,12 @@
 .navbar.navbar-default.navbar-fixed-bottom
   .container
     .navbar-header
-      a.navbar-brand(href="/") 重度科幻迷
+      a.navbar-brand(href="/nodeport/") 重度科幻迷
     if user
       p.navbar-text.navbar-right
         span 欢迎您,#{user.name}
         span &nbsp;|&nbsp;
-        a.navbar-link(href="/logout") 登出
+        a.navbar-link(href="/nodeport/logout") 登出
     else
       p.navbar-text.navbar-right
         a.navbar-link(href="#", data-toggle="modal", data-target="#signupModal") 注册
@@ -27,7 +27,7 @@
 #signupModal.modal.fade
   .modal-dialog
     .modal-content
-      form(method="POST", action="/user/signup")
+      form(method="POST", action="/nodeport/user/signup")
         .modal-header 注册
         .modal-body
           .form-group
@@ -42,7 +42,7 @@
 #signinModal.modal.fade
   .modal-dialog
     .modal-content
-      form(method="POST", action="/user/signin")
+      form(method="POST", action="/nodeport/user/signin")
         .modal-header 登录
         .modal-body
           .form-group
