--- a/wechat/app/views/pages/category_admin.jade
+++ b/wechat/app/views/pages/category_admin.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .container
     .row
-      form.form-horizontal(method="post", action="/admin/category")
+      form.form-horizontal(method="post", action="/nodeport/admin/category")
         .form-group
           label.col-sm-2.control-label(for="inputCategory") 电影分类
           .col-sm-10
