--- a/wechat/app/views/pages/signin.jade
+++ b/wechat/app/views/pages/signin.jade
@@ -4,7 +4,7 @@ block content
   .container
     .row
       .col-md-5
-        form(method="POST", action="/user/signin")
+        form(method="POST", action="/nodeport/user/signin")
           .modal-body
             .form-group
               label(for="signinName") 用户名
