--- a/wechat/app/views/pages/signup.jade
+++ b/wechat/app/views/pages/signup.jade
@@ -4,7 +4,7 @@ block content
   .container
     .row
       .col-md-5
-        form(method="POST", action="/user/signup")
+        form(method="POST", action="/nodeport/user/signup")
           .modal-body
             .form-group
               label(for="signupName") 用户名
